[package]
name = "main_game_loop"
version = "0.4.0"
edition = "2021"
description = "A game loop with event handling"
license = "MIT"
repository = "https://github.com/Overpeek/main_game_loop"
documentation = "https://docs.rs/main_game_loop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1"
winit = "0.26"
log = "0.4"
glam = "0.20"
rustc-hash = "1.1"

# sdl2 = "0.35"
gilrs = "0.8"


[dev-dependencies]
env_logger = "0.9"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# syncronous await operator
pollster = "0.2"
# logging
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# futures for wasm
wasm-bindgen-futures = "0.4"
# logging
console_log = { version = "0.2", features = ["color"] }
# wasm panic hook
console_error_panic_hook = "0.1"
