[package]
name = "main_game_loop"
version = "0.5.0"
edition = "2021"
description = "A tool collection for building a winit game loop"
license = "MIT"
repository = "https://github.com/Overpeek/main_game_loop"
documentation = "https://docs.rs/main_game_loop"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1"
winit = "0.27"
log = "0.4"
glam = "0.21"
rustc-hash = "1.1"

# sdl2 = "0.35"
gilrs = "0.9"


[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
